# messenger_test_task

./: .gitignore  README.md  pyproject.toml
src/common/: exceptions.py  repositories.py
src/domain/chats/: entities.py  repositories.py  services.py
src/domain/messages/: entities.py  repositories.py  services.py
src/domain/users/: entities.py  repositories.py  services.py
tests/units/services/: chat_service_test.py  message_service_test.py  user_service_test.py
